fix icon size/alignment

--- a/app/assets/stylesheets/app/timeline.scss
+++ b/app/assets/stylesheets/app/timeline.scss
@@ -168,6 +168,10 @@ body .unit {
   margin-left: 16px;
 }
 
+.timeline_header i {
+  vertical-align: top;
+}
+
 .timeline_instrument {
   margin: 15px 0 22px;
 
